ss-helm/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 35.212.245.116
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: somethingspecial-service
          servicePort: 3000
